# GREAM

./: .gitignore  AGENT_FRAMEWORK_ANALYSIS.md  GRAEM_planning_prompt.md  PLAN.md  README.md  SECURITY_ASSESSMENT.md  build.py  build_org.py  pyproject.toml  requirements.txt  run.py  run_org.py
.claude/: settings.local.json
app/: __init__.py  config.py  main.py
app/api/: __init__.py
app/api/routes/: __init__.py  agents.py  documents.py  google_drive.py  libraries.py  logs.py  mcp.py  search.py  settings.py  viewer.py
app/models/: __init__.py  agents.py
app/services/: __init__.py  agent_executor.py  agent_manager.py  agent_tools.py  ai_client.py  document_processor.py  google_drive.py  graph_db.py  library_manager.py  mcp_client_manager.py  mcp_registry.py  vector_db.py
app/static/: index.html  xml_viewer.html
app/static/css/: style.css
app/static/js/: app.js
code-to-reuse/: config.py  kg_builder.py  llm_service.py
config/: mcp_servers.yaml
demo_data/: DMC-ATEST-A-32-00-00-00A-040A-D_001-00.xml  DMC-ATEST-A-32-10-00-00A-040A-D_001-00.xml  DMC-ATEST-A-32-10-00-00A-520A-D_001-00.xml  OEM_bulletin_HYD-2024-001.txt
mcp_servers/brex_validator/: server.py
mcp_servers/document_loader/: server.py
mcp_servers/pptx_graem/: server.py
mcp_servers/s1000d_csdb/: server.py
mcp_servers/ste_checker/: server.py
mcp_servers/word_graem/: server.py
scripts/: prepare_demo.py
test_copy_db/: catalog.kz  data.kz  metadata.kz  nodes.statistics_and_deleted.ids
tests/: conftest.py  test_mcp_dispatcher.py  test_mcp_fase2.py  test_mcp_fase3.py  test_mcp_fase4.py  test_mcp_fase5.py  test_mcp_fase6.py  test_mcp_fase7.py  test_mcp_fase8.py
venv_graphragexec_copy/: pyvenv.cfg
venv_graphragexec_copy/Scripts/: activate  activate.bat
